Button, rgb led control and wifi attach

--- a/data/register.html
+++ b/data/register.html
@@ -89,7 +89,7 @@
             </div>
             <br>
             <button onclick="previousPhase()">Regresar</button>
-            <button onclick="submitData()">Enviar</button>
+            <button onclick="submitData()" id="btnSubmitData">Enviar</button>
         </div>
     </div>
 
